2009-01-03  Hans-Peter Nilsson  <hp@axis.com>

	* sim/cris/c/uname1.c: New test.
	* sim/cris/c/mmap1.c (MMAP_FLAGS): Default-define to
	MAP_PRIVATE and use this macro in the mmap call.
	* sim/cris/c/mmap4.c: New test.
	* sim/cris/c/access1.c: New test.
	* sim/cris/asm/pid1.ms: New test.

2008-12-30  Hans-Peter Nilsson  <hp@axis.com>

	* sim/cris/asm/badarch1.ms: Tweak error message match.

	* sim/cris/asm/badarch1.ms, sim/cris/c/badldso1.c,
	sim/cris/c/badldso2.c, sim/cris/c/badldso3.c,
	sim/cris/c/helloaout.c, sim/cris/c/hellodyn.c,
	sim/cris/c/hellodyn2.c, sim/cris/c/writev1.c,
	sim/cris/c/writev2.c: New tests.
	* sim/cris/c/c.exp: If compiler links libc.so when attempting to
	link dynamically, create symlink named "lib" to the directory
	where it is found.  Handle new test-case option "dynamic".

	* sim/cris/asm/opterr1.ms, sim/cris/asm/opterr2.ms: Adjust for
	differences in getopt_long error message quoting.

2008-02-12  M Ranga Swami Reddy <MR.Swami.Reddy@nsc.com>

	* sim/cr16/: New directory. Tests for CR16 simulator.
	sim/cr16/allinsn.exp and sim/cr16/misc.exp: New files: Test scripts.
	sim/cr16/testutils.inc: New file: Test macros.
	sim/cr16/addb.cgs, sim/cr16/addd.cgs, sim/cr16/addi.cgs, 
	sim/cr16/addw.cgs, sim/cr16/andb.cgs, sim/cr16/andd.cgs,
	sim/cr16/andw.cgs, sim/cr16/ashub.cgs, sim/cr16/ashub_i.cgs,
	sim/cr16/ashud.cgs, sim/cr16/ashud_i.cgs, sim/cr16/ashuw.cgs, 
	sim/cr16/ashuw_i.cgs, sim/cr16/lshb.cgs, sim/cr16/lshb_i.cgs,
	sim/cr16/lshd.cgs, sim/cr16/lshd_i.cgs, sim/cr16/lshw.cgs, 
	sim/cr16/lshw_i.cgs, sim/cr16/bal1_24.cgs, sim/cr16/bal2_24.cgs,
	sim/cr16/bcc.cgs, sim/cr16/bcs.cgs, sim/cr16/beq.cgs, sim/cr16/bne.cgs
	sim/cr16/bge.cgs, sim/cr16/bgt.cgs, sim/cr16/bhi.cgs, sim/cr16/bhs.cgs,
	sim/cr16/br.cgs, sim/cr16/beq0b.cgs, sim/cr16/beq0w.cgs, 
	sim/cr16/bne0b.cgs, sim/cr16/bne0w.cgs, sim/cr16/cmpb.cgs, 
	sim/cr16/cmpb_i.cgs, sim/cr16/cmpd.cgs, sim/cr16/cmpd_i.cgs, 
	sim/cr16/cmpw.cgs, sim/cr16/cmpw_i.cgs, sim/cr16/cmpi.cgs,